carina-cli/src/snapshots/carina__plan_snapshot_tests__plan_snapshot_exports.snap
---
source: carina-cli/src/plan_snapshot_tests.rs
expression: strip_ansi(&output)
---
Execution Plan:

  + awscc.ec2.vpc vpc
      cidr_block: "10.0.0.0/16"

Exports:

  + vpc_id: string = vpc.vpc_id
  + cidr = vpc.cidr_block

Plan: 1 to add, 0 to change, 0 to destroy.
