carina-cli/src/snapshots/carina__plan_snapshot_tests__plan_snapshot_remote_state.snap
---
source: carina-cli/src/plan_snapshot_tests.rs
expression: strip_ansi(&output)
---
Execution Plan:

  + awscc.ec2.security_group ec2_security_group_acdfb070
      group_description: "Web security group"
      tags:
        Name: "web-sg"
      vpc_id: "vpc-abc123"
      group_id: (known after apply)
      id: (known after apply)

Plan: 1 to add, 0 to change, 0 to destroy.
