carina-cli/src/snapshots/carina__plan_snapshot_tests__snapshot_compact.snap
---
source: carina-cli/src/plan_snapshot_tests.rs
expression: output
---
Execution Plan:

  + awscc.ec2.route_table (vpc: vpc)
        └─ + awscc.ec2.vpc vpc
  + awscc.ec2.subnet (availability_zone: ap-northeast-1a)

Plan: 3 to add, 0 to change, 0 to destroy.
