carina-cli/src/snapshots/carina__plan_snapshot_tests__snapshot_default_tags.snap
---
source: carina-cli/src/plan_snapshot_tests.rs
expression: output
---
Execution Plan:

  + awscc.ec2.vpc vpc
      cidr_block: "10.0.0.0/16"
      tags.Environment: "staging"
      tags.ManagedBy: "carina"  # default_tags
      tags.Name: "main-vpc"
      cidr_block_associations: (known after apply)
      default_network_acl: (known after apply)
      default_security_group: (known after apply)
      ipv6_cidr_blocks: (known after apply)
      vpc_id: (known after apply)
        │
        └─ + awscc.ec2.route_table ec2_route_table_d8d0c86b
              tags.Environment: "production"  # default_tags
              tags.ManagedBy: "carina"  # default_tags
              vpc_id: vpc.vpc_id
              route_table_id: (known after apply)

Plan: 2 to add, 0 to change, 0 to destroy.
