carina-cli/src/snapshots/carina__plan_snapshot_tests__snapshot_default_values.snap
---
source: carina-cli/src/plan_snapshot_tests.rs
expression: output
---
Execution Plan:

  + awscc.logs.log_group logs_log_group_702321fd
      log_group_name: "my-app-logs"
      retention_in_days: 30
      deletion_protection_enabled: false  # default
      log_group_class: "STANDARD"  # default
      arn: (known after apply)

Plan: 1 to add, 0 to change, 0 to destroy.
