carina-cli/src/snapshots/carina__plan_snapshot_tests__snapshot_delete_orphan.snap
---
source: carina-cli/src/plan_snapshot_tests.rs
expression: output
---
Execution Plan:

  - awscc.ec2.subnet my_subnet
      availability_zone: "ap-northeast-1a"
      cidr_block: "10.0.1.0/24"
      subnet_id: "subnet-0123456789abcdef0"
      tags:
        Name: "test-subnet"
      vpc_id: "vpc-0123456789abcdef0"

Plan: 0 to add, 0 to change, 1 to destroy.
